--- a/html/Home.html
+++ b/html/Home.html
@@ -6,17 +6,21 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="nav">
+    <nav>
         <ul>
-            <li><a href="#"></a></li>
+            <li><a href="#"><img src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a></li>
             <li><a href="#">Info</a></li>
             <li><a href="#">Aanbod</a></li>
             <li><a href="#">Agenda</a></li>
             <li><a href="#">Reservaties</a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#"><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a></li>
+            <li><a href="#"><img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a></li>
+            <li><a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a></li>
         </ul>
+    </nav>
+    <div class="searchbar">
+        <input type="text" placeholder="Zoek een film">
+        <button><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
     </div>
     
 </body>
