--- a/html/Home.html
+++ b/html/Home.html
@@ -6,6 +6,7 @@
     <title>Home</title>
 </head>
 <body>
+    <!-- bovenste navigatie -->
     <nav>
         <ul>
             <li><a href="#"><img src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a></li>
@@ -18,9 +19,22 @@
             <li><a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a></li>
         </ul>
     </nav>
+    <!-- searchbar -->
     <div class="searchbar">
         <input type="text" placeholder="Zoek een film">
         <button><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
+    </div>
+    <!-- categorielijst -->
+    <div class="categorie">
+        <h1><a href="#">Categorieën</a></h1>
+        <ul class="categorie_lijst">
+            <li><a href="#">Audio</a></li>
+            <li><a href="#">Belichting</a></li>
+            <li><a href="#">Tools</a></li>
+            <li><a href="#">Varia</a></li>
+            <li><a href="#">Video</a></li>
+            <li><a href="#">XR</a></li>
+        </ul>
     </div>
     
 </body>
