recent bekeken lijst + hoe leen je iets uit lijst

--- a/html/Home.html
+++ b/html/Home.html
@@ -19,14 +19,16 @@
             <li><a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a></li>
         </ul>
     </nav>
+
     <!-- searchbar -->
     <div class="searchbar">
         <input type="text" placeholder="Zoek een film">
         <button><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
     </div>
+
     <!-- categorielijst -->
     <div class="categorie">
-        <h1><a href="#">Categorieën</a></h1>
+        <h2><a href="#">Categorieën</a></h2>
         <ul class="categorie_lijst">
             <li><a href="#">Audio</a></li>
             <li><a href="#">Belichting</a></li>
@@ -36,6 +38,33 @@
             <li><a href="#">XR</a></li>
         </ul>
     </div>
-    
+
+    <!-- Recent bekeken lijst -->
+    <div class="recent">
+        <h2>Recent bekeken</h2>
+        <ul>
+            <li><a href="#">
+                <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="Canon - M50">
+                <h3>Canon-M50</h3>
+            </a></li>
+        </ul>
+    </div>
+
+    <!-- Hoe leen je iets uit? -->
+    <div class="uitleen_uitleg">
+        <h2>Hoe leen je iets uit?</h2>
+        <ul>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+        </ul>
+        <div class="meer_info">
+            <a href="#">
+                <h3>Meer info</h3>
+            </a>
+        </div>
+    </div>
+
 </body>
 </html>
