navigatie css begonnen

--- a/html/Home.html
+++ b/html/Home.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="/css/stylesheet.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        </style>
 </head>
 <body>
     <!-- bovenste navigatie -->
     <nav>
         <ul>
-            <li><a href="#"><img src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a></li>
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Aanbod</a></li>
-            <li><a href="#">Agenda</a></li>
-            <li><a href="#">Reservaties</a></li>
+            <li><a href="#"><img class="ehb-logo" src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a></li>
+            <li><a href="#"><h1>Info</h1></a></li>
+            <li><a href="#"><h1>Inventaris</h1></a></li>
+            <li><a href="#"><h1>Kalender</h1></a></li>
+            <li><a href="#"><h1>Reservaties</h1></a></li>
             <li><a href="#"><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a></li>
             <li><a href="#"><img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a></li>
             <li><a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a></li>
