--- a/html/Home.html
+++ b/html/Home.html
@@ -12,16 +12,18 @@
 <body>
     <!-- bovenste navigatie -->
     <nav>
+        <a href="#"><img class="ehb_logo" src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a>
         <ul>
-            <li><a href="#"><img class="ehb-logo" src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a></li>
             <li><a href="#"><h1>Info</h1></a></li>
             <li><a href="#"><h1>Inventaris</h1></a></li>
             <li><a href="#"><h1>Kalender</h1></a></li>
             <li><a href="#"><h1>Reservaties</h1></a></li>
-            <li><a href="#"><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a></li>
-            <li><a href="#"><img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a></li>
-            <li><a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a></li>
         </ul>
+        <div class="rechter_navigatie">
+            <a href="#"><img class="favorieten" src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a>
+            <a href="#"><img class="winkelmandje" src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a>
+            <a href="#"><img class="profiel" src="/images/svg/user-solid.svg" alt="profiel - logout"></a>
+        </div>
     </nav>
 
     <!-- searchbar -->
