--- a/html/Home.html
+++ b/html/Home.html
@@ -12,7 +12,7 @@
 <body>
     <!-- bovenste navigatie -->
     <nav>
-        <a href="#"><img class="ehb_logo" src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a>
+        <a href="Home.html"><img class="ehb_logo" src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a>
         <ul>
             <li><a href="#"><h1>Info</h1></a></li>
             <li><a href="#"><h1>Inventaris</h1></a></li>
