--- a/html/Home.html
+++ b/html/Home.html
@@ -14,10 +14,10 @@
     <nav>
         <a href="Home.html"><img class="ehb_logo" src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a>
         <ul>
-            <li><a href="#"><h1>Info</h1></a></li>
-            <li><a href="#"><h1>Inventaris</h1></a></li>
-            <li><a href="#"><h1>Kalender</h1></a></li>
-            <li><a href="#"><h1>Reservaties</h1></a></li>
+            <li><a href="/html/Info.html"><h1>Info</h1></a></li>
+            <li><a href="/html/Inventaris.html"><h1>Inventaris</h1></a></li>
+            <li><a href="/html/Kalender.html"><h1>Kalender</h1></a></li>
+            <li><a href="/html/Reservaties.html"><h1>Reservaties</h1></a></li>
         </ul>
         <div class="rechter_navigatie">
             <a href="#"><img class="favorieten" src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a>
@@ -26,15 +26,15 @@
         </div>
     </nav>
 
-    <!-- searchbar -->
-    <div class="searchbar">
-        <input type="text" placeholder="Zoek een film">
+    <!-- zoekbalk -->
+    <div class="zoekbalk">
+        <input type="text" placeholder="Geef een zoekterm in ...">
         <button><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
     </div>
 
     <!-- categorielijst -->
     <div class="categorie">
-        <h2><a href="#">Categorieën</a></h2>
+        <a href="#"><h2>Categorieën</h2></a>
         <ul class="categorie_lijst">
             <li><a href="#">Audio</a></li>
             <li><a href="#">Belichting</a></li>
