--- a/html/Home.html
+++ b/html/Home.html
@@ -20,16 +20,18 @@
             <li><a href="/html/Reservaties.html"><h1>Reservaties</h1></a></li>
         </ul>
         <div class="rechter_navigatie">
-            <a href="#"><img class="favorieten" src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a>
-            <a href="#"><img class="winkelmandje" src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a>
-            <a href="#"><img class="profiel" src="/images/svg/user-solid.svg" alt="profiel - logout"></a>
+            <a href="#"><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a>
+            <a href="#"><img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a>
+            <a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a>
         </div>
     </nav>
 
     <!-- zoekbalk -->
-    <div class="zoekbalk">
-        <input type="text" placeholder="Geef een zoekterm in ...">
-        <button><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
+    <div class="zoekbalk_container">
+        <div class="zoekbalk">
+            <input id="zoek_input" type="text" placeholder="Geef een zoekterm in ...">
+            <button id="zoek_btn"><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
+        </div>
     </div>
 
     <!-- categorielijst -->
