categorie lijst css toegepast

--- a/html/Home.html
+++ b/html/Home.html
@@ -29,6 +29,15 @@
     <!-- zoekbalk -->
     <div class="zoekbalk_container">
         <div class="zoekbalk">
+            <select name="categorie" id="" >
+                <option value="alles"></option>
+                <option value="audio">Audio</option>
+                <option value="belichting">Belichting</option>
+                <option value="tools">Tools</option>
+                <option value="varia">Varia</option>
+                <option value="video">Video</option>
+                <option value="xr">XR</option>
+            </select>
             <input id="zoek_input" type="text" placeholder="Geef een zoekterm in ...">
             <button id="zoek_btn"><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
         </div>
