--- a/html/Home.html
+++ b/html/Home.html
@@ -57,24 +57,53 @@
     </div>
 
     <!-- Recent bekeken lijst -->
-    <div class="recent">
+    <div class="recent_container">
         <h2>Recent bekeken</h2>
-        <ul>
-            <li><a href="#">
-                <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="Canon - M50">
-                <h3>Canon-M50</h3>
-            </a></li>
-        </ul>
+        </div>
+        <div class="recent_lijst_container">
+            <img src="/images/svg/chevron-left-solid.svg" alt="">
+            <ul class="recent_lijst">
+                <li><a href="#">
+                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                    <h3>Canon-M50</h3>
+                </a></li>
+                <li><a href="#">
+                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                    <h3>Canon-M50</h3>
+                </a></li>
+                <li><a href="#">
+                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                    <h3>Canon-M50</h3>
+                </a></li>
+                <li><a href="#">
+                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                    <h3>Canon-M50</h3>
+                </a></li>
+            </ul>
+            <img src="/images/svg/chevron-right-solid.svg" alt="">
+        </div>
     </div>
 
     <!-- Hoe leen je iets uit? -->
     <div class="uitleen_uitleg">
         <h2>Hoe leen je iets uit?</h2>
         <ul>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#">
+                <h3>Stap 1</h3>
+                <p>Kies een apparaat</p>
+            </a></li>
+            <li><a href="#">
+                <h3>Stap 2</h3>
+                <p>Bepaal je uitleenperiode</p>
+            </a></li>
+            <li><a href="#">
+                <h3>Stap 3</h3>
+                <p>Plaats je reservatie</p>
+            </a></li>
+            <li><a href="#">
+                <h3>Stap 4</h3>
+                <p>Haal het apparaat op in het medialab</p>
+            </a></li>
         </ul>
         <div class="meer_info">
             <a href="#">
