--- a/Footer.html
+++ b/Footer.html
@@ -8,22 +8,22 @@
   </head>
   <body>
     <footer>
+        <div class="footer_container">
       <div class="ehb-info">
         <ul>
           <!-- emial linken met echte mail -->
           <li>
-            <a href="images/svg/envelope-solid.svg">medialab.ehb@ehb.be</a>
+            <a href="#"><img src="images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
           </li>
           <!-- linken so that it calls directly -->
-          <li><a href="images/svg/phone-solid.svg">+32 84 42 63 78</a></li>
+          <li><a href="#"><img src="images/svg/phone-solid.svg" alt="phone"> +32 84 42 63 78</a></li>
           <!-- linken so that it can directly go to the webside -->
           <li>
-            <a href="images/svg/desktop-solid.svg">www.erasmushogeschool.be</a>
+            <a href="#"><img src="images/svg/desktop-solid.svg" alt="desktop"> www.erasmushogeschool.be</a>
           </li>
           <!-- linken met google maps -->
           <li>
-            <a href="images/svg/location-dot-solid.svg"
-              >Nijverheidskaai 170,1070 Anderlecht</a
+            <a href="#"> <img src="images/svg/location-dot-solid.svg" alt="location"> Nijverheidskaai 170,1070 Anderlecht</a
             >
           </li>
         </ul>
@@ -63,7 +63,8 @@
           </tr>
         </table>
       </div>
-      <div><p>&copy;Groep 8 - Programming Project</p></div>
+    </div>
+      <div class="einde"><p>&copy;Groep 8 - Programming Project</p></div>
     </footer>
   </body>
 </html>
