--- a/html/Inventaris.html
+++ b/html/Inventaris.html
@@ -71,5 +71,22 @@
             </li>
         </ul>
     </div>
+
+    <!-- apparatenlijst -->
+    <div class="apparatenlijst">
+        <ul>
+            <li><a href="#">
+                <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                <div class="beschrijving">
+                    <h3>Canon M50</h3>
+                    <p>Fototoestel</p> 
+                </div>
+                <div class="beschikbaarheid_Apparaat">
+                    <p>Beschikbaar tot <span></span></p>
+                    <img src="/images/svg/circle-check-solid.svg" alt="check">
+                </div>
+            </a></li>
+        </ul>
+    </div>
 </body>
 </html>
