uitleen stappen +footer

--- a/html/Footer.html
+++ b/html/Footer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Footer</title>
-    <link rel="stylesheet" href="/css/Footer.css" />
+    <link rel="stylesheet" href="../css/stylesheet.css" />
   </head>
   <body>
     <footer>
@@ -13,17 +13,17 @@
         <ul>
           <!-- emial linken met echte mail -->
           <li>
-            <a href="#"><img src="images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
+            <a href="#"><img src="../images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
           </li>
           <!-- linken so that it calls directly -->
-          <li><a href="#"><img src="images/svg/phone-solid.svg" alt="phone"> +32 84 42 63 78</a></li>
+          <li><a href="#"><img src="../images/svg/phone-solid.svg" alt="phone"> +32 84 42 63 78</a></li>
           <!-- linken so that it can directly go to the webside -->
           <li>
-            <a href="#"><img src="images/svg/desktop-solid.svg" alt="desktop"> www.erasmushogeschool.be</a>
+            <a href="#"><img src="../images/svg/desktop-solid.svg" alt="desktop"> www.erasmushogeschool.be</a>
           </li>
           <!-- linken met google maps -->
           <li>
-            <a href="#"> <img src="images/svg/location-dot-solid.svg" alt="location"> Nijverheidskaai 170,1070 Anderlecht</a
+            <a href="#"> <img src="../images/svg/location-dot-solid.svg" alt="location"> Nijverheidskaai 170,1070 Anderlecht</a
             >
           </li>
         </ul>
