--- a/html/Inventaris.html
+++ b/html/Inventaris.html
@@ -73,20 +73,22 @@
     </div>
 
     <!-- apparatenlijst -->
-    <div class="apparatenlijst">
-        <ul>
-            <li><a href="#">
-                <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                <div class="beschrijving">
+        <ul class="apparatenlijst">
+            <li class="apparaat"><a href="#">
+                <img class="apparaat_foto" src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                <div class="korte_beschrijving">
                     <h3>Canon M50</h3>
                     <p>Fototoestel</p> 
                 </div>
-                <div class="beschikbaarheid_Apparaat">
-                    <p>Beschikbaar tot <span></span></p>
+                <div class="beschikbaarheid_apparaat">
+                    <p>Beschikbaar tot <br><span>30/05/2024</span></p>
                     <img src="/images/svg/circle-check-solid.svg" alt="check">
+                </div>
+                <div class="toevoegen">
+                    <img src="/images/svg/heart-solid.svg" alt="favorietenlijst">
+                    <img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje">
                 </div>
             </a></li>
         </ul>
-    </div>
 </body>
 </html>
