kleine aanpassingen gemaakt in margin in home pagina

--- a/html/Home.html
+++ b/html/Home.html
@@ -42,75 +42,77 @@
             <button id="zoek_btn"><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
         </div>
     </div>
-
+<div class="inhoud_body">
     <!-- categorielijst -->
     <div class="categorie">
-        <a href="#"><h2>Categorieën</h2></a>
-        <ul class="categorie_lijst">
-            <li><a href="#">Audio</a></li>
-            <li><a href="#">Belichting</a></li>
-            <li><a href="#">Tools</a></li>
-            <li><a href="#">Varia</a></li>
-            <li><a href="#">Video</a></li>
-            <li><a href="#">XR</a></li>
-        </ul>
-    </div>
+      <a href="#"><h2>Categorieën</h2></a>
+      <ul class="categorie_lijst">
+          <li><a href="#">Audio</a></li>
+          <li><a href="#">Belichting</a></li>
+          <li><a href="#">Tools</a></li>
+          <li><a href="#">Varia</a></li>
+          <li><a href="#">Video</a></li>
+          <li><a href="#">XR</a></li>
+      </ul>
+  </div>
 
-    <!-- Recent bekeken lijst -->
-    <div class="recent_container">
-        <h2>Recent bekeken</h2>
-        </div>
-        <div class="recent_lijst_container">
-            <img src="/images/svg/chevron-left-solid.svg" alt="">
-            <ul class="recent_lijst">
-                <li><a href="#">
-                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                    <h3>Canon-M50</h3>
-                </a></li>
-                <li><a href="#">
-                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                    <h3>Canon-M50</h3>
-                </a></li>
-                <li><a href="#">
-                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                    <h3>Canon-M50</h3>
-                </a></li>
-                <li><a href="#">
-                    <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                    <h3>Canon-M50</h3>
-                </a></li>
-            </ul>
-            <img src="/images/svg/chevron-right-solid.svg" alt="">
-        </div>
-    </div>
+  <!-- Recent bekeken lijst -->
+  <div class="recent_container">
+      <h2>Recent bekeken</h2>
+      </div>
+      <div class="recent_lijst_container">
+          <img src="/images/svg/chevron-left-solid.svg" alt="">
+          <ul class="recent_lijst">
+              <li><a href="#">
+                  <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                  <h3>Canon-M50</h3>
+              </a></li>
+              <li><a href="#">
+                  <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                  <h3>Canon-M50</h3>
+              </a></li>
+              <li><a href="#">
+                  <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                  <h3>Canon-M50</h3>
+              </a></li>
+              <li><a href="#">
+                  <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                  <h3>Canon-M50</h3>
+              </a></li>
+          </ul>
+          <img src="/images/svg/chevron-right-solid.svg" alt="">
+      </div>
+  </div>
 
-    <!-- Hoe leen je iets uit? -->
-    <div class="uitleen_uitleg">
-        <h2>Hoe leen je iets uit?</h2>
-        <ul>
-            <li><a href="#">
-                <h3>Stap 1</h3>
-                <p>Kies een apparaat</p>
-            </a></li>
-            <li><a href="#">
-                <h3>Stap 2</h3>
-                <p>Bepaal je uitleenperiode</p>
-            </a></li>
-            <li><a href="#">
-                <h3>Stap 3</h3>
-                <p>Plaats je reservatie</p>
-            </a></li>
-            <li><a href="#">
-                <h3>Stap 4</h3>
-                <p>Haal het apparaat op in het medialab</p>
-            </a></li>
-        </ul>
-        <div class="meer_info">
-            <a href="#">
-                <h3>Meer info</h3>
-            </a>
-        </div>
-    </div>
+  <!-- Hoe leen je iets uit? -->
+  <div class="uitleen_uitleg">
+      <h2>Hoe leen je iets uit?</h2>
+      <ul>
+          <li><a href="#">
+              <h3>Stap 1</h3>
+              <p>Kies een apparaat</p>
+          </a></li>
+          <li><a href="#">
+              <h3>Stap 2</h3>
+              <p>Bepaal je uitleenperiode</p>
+          </a></li>
+          <li><a href="#">
+              <h3>Stap 3</h3>
+              <p>Plaats je reservatie</p>
+          </a></li>
+          <li><a href="#">
+              <h3>Stap 4</h3>
+              <p>Haal het apparaat op in het medialab</p>
+          </a></li>
+      </ul>
+      <div class="meer_info">
+          <a href="#">
+              <h3>Meer info</h3>
+          </a>
+      </div>
+  </div>
+</div>
+    
 
 </body>
 <footer>
