--- a/html/Inventaris.html
+++ b/html/Inventaris.html
@@ -89,6 +89,82 @@
                     <img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje">
                 </div>
             </a></li>
+            <li class="apparaat"><a href="#">
+                <img class="apparaat_foto" src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
+                <div class="korte_beschrijving">
+                    <h3>Canon M50</h3>
+                    <p>Fototoestel</p> 
+                </div>
+                <div class="beschikbaarheid_apparaat">
+                    <p>Beschikbaar tot <br><span>30/05/2024</span></p>
+                    <img src="/images/svg/circle-check-solid.svg" alt="check">
+                </div>
+                <div class="toevoegen">
+                    <img src="/images/svg/heart-solid.svg" alt="favorietenlijst">
+                    <img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje">
+                </div>
+            </a></li>
         </ul>
+
+        <footer>
+            <div class="footer_container">
+          <div class="ehb-info">
+            <ul>
+              <!-- emial linken met echte mail -->
+              <li>
+                <a href="#"><img src="../images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
+              </li>
+              <!-- linken so that it calls directly -->
+              <li><a href="#"><img src="../images/svg/phone-solid.svg" alt="phone"> +32 84 42 63 78</a></li>
+              <!-- linken so that it can directly go to the webside -->
+              <li>
+                <a href="#"><img src="../images/svg/desktop-solid.svg" alt="desktop"> www.erasmushogeschool.be</a>
+              </li>
+              <!-- linken met google maps -->
+              <li>
+                <a href="#"> <img src="../images/svg/location-dot-solid.svg" alt="location"> Nijverheidskaai 170,1070 Anderlecht</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="opening-hours">
+            <h1>Openingsuren</h1>
+            <table>
+              <tr>
+                <th>Maandag</th>
+                <td>10:00 - 12:00</td>
+                <td>12:30 - 17:00</td>
+              </tr>
+              <tr>
+                <th>Dinsdag</th>
+                <td>/</td>
+                <td>/</td>
+              </tr>
+              <tr>
+                <th>Woensdag</th>
+                <td>/</td>
+                <td>/</td>
+              </tr>
+              <tr>
+                <th>Donderdag</th>
+                <td>10:00 - 12:00</td>
+                <td>12:30 - 17:00</td>
+              </tr>
+              <tr>
+                <th>Vrijdag</th>
+                <td>10:00 - 12:00</td>
+                <td>12:30 - 17:00</td>
+              </tr>
+              <tr>
+                <th>Weekend</th>
+                <td>/</td>
+                <td>/</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+          <div class="einde"><p>&copy;Groep 8 - Programming Project</p></div>
+        </footer>
 </body>
+
 </html>
