apparaat pagina gefixt en klaar

--- a/html/Inventaris.html
+++ b/html/Inventaris.html
@@ -74,7 +74,8 @@
 
     <!-- apparatenlijst -->
         <ul class="apparatenlijst">
-            <li class="apparaat"><a href="#">
+          <!-- gaat gegenereerd moeten worden met onze javascript of iets anders -->
+            <li class="apparaat"><a href="ApparaatPagina.html">
                 <img class="apparaat_foto" src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
                 <div class="korte_beschrijving">
                     <h3>Canon M50</h3>
