apparaten pagina kits en categorie gedeelte toegevoegd

--- a/html/ApparaatPagina.html
+++ b/html/ApparaatPagina.html
@@ -93,6 +93,44 @@
         </ul>
     </div>
 
+    <div class="kits">
+      <h2>Kits</h2>
+      <ul>
+        <li>
+          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+          <h3>Canon-M50</h3>
+        </li>
+        <li>
+          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+          <h3>Canon-M50</h3>
+        </li>
+        <li>
+          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+          <h3>Canon-M50</h3>
+        </li>
+        <li id="selectie_toevoegen">
+          <p>Voeg selectie toe aan reservatie</p>
+        </li>
+      </ul>
+    </div>
+
+    <div class="dezelfdeCategorie">
+      <h2>Van dezelfde categorie</h2>
+      <ul>
+        <li>
+          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+          <h3>Canon-M50</h3>
+        </li>
+        <li>
+          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+          <h3>Canon-M50</h3>
+        </li>
+        <li>
+          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+          <h3>Canon-M50</h3>
+        </li>
+      </ul>
+    </div>
      <footer>
         <div class="footer_container">
       <div class="ehb-info">
