--- a/html/ApparaatPagina.html
+++ b/html/ApparaatPagina.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apparaat</title>
     <link rel="stylesheet" href="/css/stylesheet.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+      </style>
 </head>
 <body>
     <nav>
@@ -99,14 +102,17 @@
         <li>
           <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
           <h3>Canon-M50</h3>
+          <img id="selectiebol" src="/images/svg/plus-circle.svg" alt="">
         </li>
         <li>
           <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
           <h3>Canon-M50</h3>
+          <img id="selectiebol" src="/images/svg/plus-circle.svg" alt="">
         </li>
         <li>
           <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
           <h3>Canon-M50</h3>
+          <img id="selectiebol" src="/images/svg/plus-circle.svg" alt="">
         </li>
         <li id="selectie_toevoegen">
           <p>Voeg selectie toe aan reservatie</p>
@@ -114,8 +120,9 @@
       </ul>
     </div>
 
-    <div class="dezelfdeCategorie">
+    <div class="dezelfde_categorie">
       <h2>Van dezelfde categorie</h2>
+      <img src="/images/svg/chevron-left-solid.svg" alt="links" class="verander">
       <ul>
         <li>
           <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
@@ -130,6 +137,7 @@
           <h3>Canon-M50</h3>
         </li>
       </ul>
+      <img src="/images/svg/chevron-right-solid.svg" alt="rechts">
     </div>
      <footer>
         <div class="footer_container">
