slider toegevoegd aan lijst met apparaten van dezelfde categorie

--- a/html/ApparaatPagina.html
+++ b/html/ApparaatPagina.html
@@ -122,22 +122,28 @@
 
     <div class="dezelfde_categorie">
       <h2>Van dezelfde categorie</h2>
-      <img src="/images/svg/chevron-left-solid.svg" alt="links" class="verander">
-      <ul>
-        <li>
-          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
-          <h3>Canon-M50</h3>
-        </li>
-        <li>
-          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
-          <h3>Canon-M50</h3>
-        </li>
-        <li>
-          <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
-          <h3>Canon-M50</h3>
-        </li>
-      </ul>
-      <img src="/images/svg/chevron-right-solid.svg" alt="rechts">
+      <div class="dezelfde_categorie_container">
+        <img class="slider" src="/images/svg/chevron-left-solid.svg" alt="links" class="verander">
+        <ul class="lijst_apparaten">
+          <li>
+            <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+            <h3>Canon-M50</h3>
+          </li>
+          <li>
+            <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+            <h3>Canon-M50</h3>
+          </li>
+          <li>
+            <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+            <h3>Canon-M50</h3>
+          </li>
+          <li>
+            <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+            <h3>Canon-M50</h3>
+          </li>
+        </ul>
+        <img class="slider" src="/images/svg/chevron-right-solid.svg" alt="rechts">
+      </div>
     </div>
      <footer>
         <div class="footer_container">
