--- a/html/Home.html
+++ b/html/Home.html
@@ -88,25 +88,25 @@
   <div class="uitleen_uitleg">
       <h2>Hoe leen je iets uit?</h2>
       <ul>
-          <li><a href="#">
+          <li><a href="Info.html">
               <h3>Stap 1</h3>
               <p>Kies een apparaat</p>
           </a></li>
-          <li><a href="#">
+          <li><a href="Info.html">
               <h3>Stap 2</h3>
               <p>Bepaal je uitleenperiode</p>
           </a></li>
-          <li><a href="#">
+          <li><a href="Info.html">
               <h3>Stap 3</h3>
               <p>Plaats je reservatie</p>
           </a></li>
-          <li><a href="#">
+          <li><a href="Info.html">
               <h3>Stap 4</h3>
               <p>Haal het apparaat op in het medialab</p>
           </a></li>
       </ul>
       <div class="meer_info">
-          <a href="#">
+          <a href="Info.html">
               <h3>Meer info</h3>
           </a>
       </div>
@@ -115,6 +115,7 @@
     
 
 </body>
+<!-- footer -->
 <footer>
     <div class="footer_container">
   <div class="ehb-info">
