--- a/html/Info.html
+++ b/html/Info.html
@@ -132,6 +132,17 @@
       </table>
     </div>
   </body>
+<!-- sancties/defect  -->
+<div class="info-sancties"><h2>Sancties</h2>
+<p>Indien je het apparaat niet komt ophalen op de uitleendatum dat je hebt gekozen of je het apparaat te laat inlevert, wordt er een <b>waarschuwing</b> bij je account toegevoegd.
+    Eens je aan 2 waarschuwingen hebt kom je voor 3 maanden op een <b>blacklist</b> waarbij je geen apparaten meer kan uitlenen tijdens die periode.</p>
+</div>
+
+<div class="info-defect">
+<h2>Defect melden</h2>
+<p>Indien je een defect of schade heeft dan meld je dit zelf aan via de reservaties pagina. Je klikt op de bijhorende knop en volgt de instructies op de pagina. Zorg dat je het juiste apparaat aanklikt met de bijhorende apparaat ID. Deze ID-sticker vind je terug als een sticker op het apparaat.</p>
+</div>
+
   <!-- footer -->
   <footer>
     <div class="footer_container">
