bevestiging voor nu reserveren pagina angemaakt

--- a/html/ApparaatPagina.html
+++ b/html/ApparaatPagina.html
@@ -87,7 +87,7 @@
                 <input type="number" id="aantal_apparaten" name="aantal_apparaten">
             </li>
             <li>
-                <button>Reserveer Nu</button>
+                <a href="/html/ReservatieBevestigen.html">Reserveer Nu</a>
             </li>
             <li>
                 <button>Voeg toe</button>
