info page veel vragen aangemaakt

--- a/html/Info.html
+++ b/html/Info.html
@@ -143,6 +143,51 @@
 <p>Indien je een defect of schade heeft dan meld je dit zelf aan via de reservaties pagina. Je klikt op de bijhorende knop en volgt de instructies op de pagina. Zorg dat je het juiste apparaat aanklikt met de bijhorende apparaat ID. Deze ID-sticker vind je terug als een sticker op het apparaat.</p>
 </div>
 
+<!-- veel gesteld vragen  -->
+<!-- antwoorden nog bijzetten  -->
+<div class="info-veel-vragen">
+  <h1>Veelgestelde vragen</h1>
+<div class="info-box">
+  <button class="info-button">
+    <i class="info-angle-down"></i>
+    <i class="info-angle-up"></i>
+  </button>
+  <h2>Wat moet ik doen indien ik mijn reservatie niet op tijd kan komen ophalen?</h2>
+  <p>antwoord vraag 1</p>
+</div>
+<div class="info-box">
+  <button class="info-button">
+    <i class="info-angle-down"></i>
+    <i class="info-angle-up"></i>
+  </button>
+  <h2>Wat moet ik doen indien ik een apparaat beschadig?</h2>
+  <p>antwoord vraag 2</p>
+</div>
+<div class="info-box">
+  <button class="info-button">
+    <i class="info-angle-down"></i>
+    <i class="info-angle-up"></i>
+  </button>
+  <h2>Hoe lang van tevoren kan ik een reservering maken?</h2>
+  <p>antwoord vraag 3</p>
+</div>
+<div class="info-box">
+  <button class="info-button">
+    <i class="info-angle-down"></i>
+    <i class="info-angle-up"></i>
+  </button>
+  <h2>Hoe ontvang ik een bevestiging van mijn reservering?</h2>
+  <p>antwoord vraag 4</p>
+</div>
+</div>
+<!-- form  -->
+<h1 class="info-form">Geen antwoord gevonden op je vraag? Vul dit formulier dan in. </h1>
+<form class="info-form">
+  <input type="text">
+  <input type="submit" value="Submit">
+</form>
+
+
   <!-- footer -->
   <footer>
     <div class="footer_container">
@@ -216,4 +261,5 @@
     </div>
     <div class="einde"><p>&copy;Groep 8 - Programming Project</p></div>
   </footer>
+  <script src="../js/info.js"></script>
 </html>
