--- a/html/FinalBevestigingReservatie.html
+++ b/html/FinalBevestigingReservatie.html
@@ -46,79 +46,74 @@
     <a href="#"><img src="/images/svg/chevron-left-solid.svg" alt=""></a>
     <h1>Reserveren</h1>
 </div>
-<p class="bevestig">Bevestig dat je deze items wilt <b>reserveren</b>.</p>
+<p class="bevestig">Deze items werden <b>succesvol</b> gereserveerd. Check je inbox voor een bevestigingsmail.</p>
 <div class="item_info_container">
     <div class="item_info">
         <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
     <h2>Canon-M50</h2>
     <p class="data">van 29/12/2024 <br> tot 14/01/2025</p>
     <h2>Aantal:</h2>
-    <img class="verwijder"  src="/images/svg/xmark-solid.svg" alt="klik weg">
     </div>
 </div>
-<div class="bevestig_btn">
-    <a href="/html/FinalBevestigingReservatie.html"><button>Bevestig</button></a>
+<footer>
+    <div class="footer_container">
+  <div class="ehb-info">
+    <ul>
+      <!-- emial linken met echte mail -->
+      <li>
+        <a href="#"><img src="../images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
+      </li>
+      <!-- linken so that it calls directly -->
+      <li><a href="#"><img src="../images/svg/phone-solid.svg" alt="phone"> +32 84 42 63 78</a></li>
+      <!-- linken so that it can directly go to the webside -->
+      <li>
+        <a href="#"><img src="../images/svg/desktop-solid.svg" alt="desktop"> www.erasmushogeschool.be</a>
+      </li>
+      <!-- linken met google maps -->
+      <li>
+        <a href="#"> <img src="../images/svg/location-dot-solid.svg" alt="location"> Nijverheidskaai 170,1070 Anderlecht</a
+        >
+      </li>
+    </ul>
+  </div>
+  <div class="opening-hours">
+    <h1>Openingsuren</h1>
+    <table>
+      <tr>
+        <th>Maandag</th>
+        <td>10:00 - 12:00</td>
+        <td>12:30 - 17:00</td>
+      </tr>
+      <tr>
+        <th>Dinsdag</th>
+        <td>/</td>
+        <td>/</td>
+      </tr>
+      <tr>
+        <th>Woensdag</th>
+        <td>/</td>
+        <td>/</td>
+      </tr>
+      <tr>
+        <th>Donderdag</th>
+        <td>10:00 - 12:00</td>
+        <td>12:30 - 17:00</td>
+      </tr>
+      <tr>
+        <th>Vrijdag</th>
+        <td>10:00 - 12:00</td>
+        <td>12:30 - 17:00</td>
+      </tr>
+      <tr>
+        <th>Weekend</th>
+        <td>/</td>
+        <td>/</td>
+      </tr>
+    </table>
+  </div>
 </div>
-
-    <footer>
-        <div class="footer_container">
-      <div class="ehb-info">
-        <ul>
-          <!-- emial linken met echte mail -->
-          <li>
-            <a href="#"><img src="../images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
-          </li>
-          <!-- linken so that it calls directly -->
-          <li><a href="#"><img src="../images/svg/phone-solid.svg" alt="phone"> +32 84 42 63 78</a></li>
-          <!-- linken so that it can directly go to the webside -->
-          <li>
-            <a href="#"><img src="../images/svg/desktop-solid.svg" alt="desktop"> www.erasmushogeschool.be</a>
-          </li>
-          <!-- linken met google maps -->
-          <li>
-            <a href="#"> <img src="../images/svg/location-dot-solid.svg" alt="location"> Nijverheidskaai 170,1070 Anderlecht</a
-            >
-          </li>
-        </ul>
-      </div>
-      <div class="opening-hours">
-        <h1>Openingsuren</h1>
-        <table>
-          <tr>
-            <th>Maandag</th>
-            <td>10:00 - 12:00</td>
-            <td>12:30 - 17:00</td>
-          </tr>
-          <tr>
-            <th>Dinsdag</th>
-            <td>/</td>
-            <td>/</td>
-          </tr>
-          <tr>
-            <th>Woensdag</th>
-            <td>/</td>
-            <td>/</td>
-          </tr>
-          <tr>
-            <th>Donderdag</th>
-            <td>10:00 - 12:00</td>
-            <td>12:30 - 17:00</td>
-          </tr>
-          <tr>
-            <th>Vrijdag</th>
-            <td>10:00 - 12:00</td>
-            <td>12:30 - 17:00</td>
-          </tr>
-          <tr>
-            <th>Weekend</th>
-            <td>/</td>
-            <td>/</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-      <div class="einde"><p>&copy;Groep 8 - Programming Project</p></div>
-    </footer>
+  <div class="einde"><p>&copy;Groep 8 - Programming Project</p></div>
+</footer>
 
 </body>
 </html>
