--- a/html/Kalender.html
+++ b/html/Kalender.html
@@ -3,9 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reservatie bevestiging</title>
+    <link rel="stylesheet" href="/css/stylesheet.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        </style>
 </head>
 <body>
+    <nav>
+        <a href="Home.html"><img class="ehb_logo" src="/images/jpg/horizontaal EhB-logo (transparante achtergrond).png" alt="EhB-logo"></a>
+        <ul>
+            <li><a href="/html/Info.html"><h1>Info</h1></a></li>
+            <li><a href="/html/Inventaris.html"><h1>Inventaris</h1></a></li>
+            <li><a href="/html/Kalender.html"><h1>Kalender</h1></a></li>
+            <li><a href="/html/Reservaties.html"><h1>Reservaties</h1></a></li>
+        </ul>
+        <div class="rechter_navigatie">
+            <a href="#"><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a>
+            <a href="#"><img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a>
+            <a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a>
+        </div>
+    </nav>
     
+    <!-- zoekbalk -->
+    <div class="zoekbalk_container">
+        <div class="zoekbalk">
+            <select name="categorie" id="" >
+                <option value="alles"></option>
+                <option value="audio">Audio</option>
+                <option value="belichting">Belichting</option>
+                <option value="tools">Tools</option>
+                <option value="varia">Varia</option>
+                <option value="video">Video</option>
+                <option value="xr">XR</option>
+            </select>
+            <input id="zoek_input" type="text" placeholder="Geef een zoekterm in ...">
+            <button id="zoek_btn"><img src="/images/svg/magnifying-glass-solid.svg" alt="magnifying glass"></button>
+        </div>
+    </div>
+
+    <div class="agendaEnTerug">
+        <a href="#"><img src="/images/svg/chevron-left-solid.svg" alt=""></a>
+        <h1>Agenda</h1>
+    </div>
+
+    <h2>Jaarkalender</h2>
+    <p>Op deze dagen zal het medialab gesloten zijn voor het uitlenen of inleveren van apparaten. Meeste van deze data kunnen jullie ook in jullie lessenrooster terugvinden.</p>
+    <table>
+        <tr>
+            <td>28/10/2024 - 03/11/2024</td>
+            <td>Allerheiligen</td>
+        </tr>
+        <tr>
+            <td>01/11/2024 (vrijdag)</td>
+            <td>Wapenstilstand</td>
+        </tr>
+        <tr>
+            <td>11/11/2024 (maandag)</td>
+            <td>Herfstvakantie</td>
+        </tr>
+        <tr>
+            <td class="uitzondering">27/11/2024 (maandag)</td>
+            <td>Uitzonderlijk gesloten</td>
+        </tr>
+        <tr>
+            <td>23/12/2024 - 05/01/2025</td>
+            <td>Kerstvakantie</td>
+        </tr>
+        <tr>
+            <td>01/04/2025 (maandag)</td>
+            <td>Paasmaandag</td>
+        </tr>
+    </table>
+    <footer>
+        <div class="footer_container">
+      <div class="ehb-info">
+        <ul>
+          <!-- emial linken met echte mail -->
+          <li>
+            <a href="#"><img src="../images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
+          </li>
+          <!-- linken so that it calls directly -->
+          <li><a href="#"><img src="../images/svg/phone-solid.svg" alt="phone"> +32 84 42 63 78</a></li>
+          <!-- linken so that it can directly go to the webside -->
+          <li>
+            <a href="#"><img src="../images/svg/desktop-solid.svg" alt="desktop"> www.erasmushogeschool.be</a>
+          </li>
+          <!-- linken met google maps -->
+          <li>
+            <a href="#"> <img src="../images/svg/location-dot-solid.svg" alt="location"> Nijverheidskaai 170,1070 Anderlecht</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="opening-hours">
+        <h1>Openingsuren</h1>
+        <table>
+          <tr>
+            <th>Maandag</th>
+            <td>10:00 - 12:00</td>
+            <td>12:30 - 17:00</td>
+          </tr>
+          <tr>
+            <th>Dinsdag</th>
+            <td>/</td>
+            <td>/</td>
+          </tr>
+          <tr>
+            <th>Woensdag</th>
+            <td>/</td>
+            <td>/</td>
+          </tr>
+          <tr>
+            <th>Donderdag</th>
+            <td>10:00 - 12:00</td>
+            <td>12:30 - 17:00</td>
+          </tr>
+          <tr>
+            <th>Vrijdag</th>
+            <td>10:00 - 12:00</td>
+            <td>12:30 - 17:00</td>
+          </tr>
+          <tr>
+            <th>Weekend</th>
+            <td>/</td>
+            <td>/</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+      <div class="einde"><p>&copy;Groep 8 - Programming Project</p></div>
+    </footer>
+
+</body>
+</html>
 </body>
 </html>
