kalender pagina af

--- a/html/Kalender.html
+++ b/html/Kalender.html
@@ -44,37 +44,56 @@
 
     <div class="agendaEnTerug">
         <a href="#"><img src="/images/svg/chevron-left-solid.svg" alt=""></a>
-        <h1>Agenda</h1>
+        <h1>Kalender</h1>
     </div>
 
-    <h2>Jaarkalender</h2>
-    <p>Op deze dagen zal het medialab gesloten zijn voor het uitlenen of inleveren van apparaten. Meeste van deze data kunnen jullie ook in jullie lessenrooster terugvinden.</p>
+    <div class="jaarkalender">
+      <h2>Jaarkalender</h2>
+    <p>Op deze dagen zal het medialab <b>gesloten</b> zijn voor het uitlenen of inleveren van apparaten. Meeste van deze data kunnen jullie ook in jullie lessenrooster terugvinden.</p>
     <table>
         <tr>
-            <td>28/10/2024 - 03/11/2024</td>
-            <td>Allerheiligen</td>
+            <td width="70%">28/10/2024 - 03/11/2024</td>
+            <td class="uitleg">Allerheiligen</td>
         </tr>
         <tr>
             <td>01/11/2024 (vrijdag)</td>
-            <td>Wapenstilstand</td>
+            <td class="uitleg">Wapenstilstand</td>
         </tr>
         <tr>
             <td>11/11/2024 (maandag)</td>
-            <td>Herfstvakantie</td>
+            <td class="uitleg">Herfstvakantie</td>
         </tr>
         <tr>
-            <td class="uitzondering">27/11/2024 (maandag)</td>
-            <td>Uitzonderlijk gesloten</td>
+            <td><b>27/11/2024 (maandag)</b></td>
+            <td class="uitleg"><b>Uitzonderlijk gesloten</b></td>
         </tr>
         <tr>
             <td>23/12/2024 - 05/01/2025</td>
-            <td>Kerstvakantie</td>
+            <td class="uitleg">Kerstvakantie</td>
         </tr>
         <tr>
             <td>01/04/2025 (maandag)</td>
-            <td>Paasmaandag</td>
+            <td class="uitleg">Paasmaandag</td>
+        </tr>
+        <tr>
+          <td> </td>
+          <td></td>
         </tr>
     </table>
+
+    </div>
+  
+    <h2 class="subtitel">Activiteiten</h2>
+
+    <div class="activiteit">
+      <img src="/images/png/workshop.png" alt="workshop flyer">
+      <div class="info_activiteit">
+        <h3>Workshop 3D printing</h3>
+        <p>Deze workshop dient als een introductie tot het gebruik van 3D-printers, waarmee je later je eigen ontwerpen kunt leren printen. We willen benadrukken dat de workshop laagdrempelig is en geschikt is voor alle studenten, ongeacht hun ervaringsniveau. Maak je geen zorgen als je nog nooit met 3D-printers hebt gewerkt - we zullen je stap voor stap begeleiden. </p>
+        <h4>Wanneer?</h4>
+      </div>
+    </div>
+
     <footer>
         <div class="footer_container">
       <div class="ehb-info">
