apparaat pagina, plaats je reservatie aangepast
nog gewoon de begin en einddatum aanpassen

--- a/html/ApparaatPagina.html
+++ b/html/ApparaatPagina.html
@@ -74,22 +74,22 @@
         </ul>
         <h2 class="reservatie">Plaats je reservatie</h2>
         <ul class="reservatie_plaatsen">
-            <li>
+            <li class="datum">
                 <label for="start_date">Start datum:</label>
                 <input type="date" id="start_date" name="start_date">
             </li>
-            <li>
+            <li class="datum">
                 <label for="end_date">Eind datum:</label>
                 <input type="date" id="end_date" name="end_date">
             </li>
-            <li>
+            <li class="aantal">
                 <label for="aantal">Aantal:</label>
-                <input type="number" id="aantal_apparaten" name="aantal_apparaten">
+                <input type="number" id="aantal_apparaten" name="aantal_apparaten" placeholder="0">
             </li>
-            <li>
+            <li class="reserveer_nu_btn">
                 <a href="/html/ReservatieBevestigen.html">Reserveer Nu</a>
             </li>
-            <li>
+            <li class="winkelmand_toevoegen_btn">
                 <button>Voeg toe</button>
                 <img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje">
             </li>
