favorietenlijst aangemaakt en css toegepast

--- a/html/Home.html
+++ b/html/Home.html
@@ -20,7 +20,7 @@
             <li><a href="/html/Reservaties.html"><h1>Reservaties</h1></a></li>
         </ul>
         <div class="rechter_navigatie">
-            <a href="#"><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a>
+            <a href="/html/Favorietenlijst.html"><img src="/images/svg/heart-solid.svg" alt="favorietenlijst"></a>
             <a href="#"><img src="/images/svg/cart-shopping-solid.svg" alt="winkelmandje"></a>
             <a href="#"><img src="/images/svg/user-solid.svg" alt="profiel - logout"></a>
         </div>
