defect meld pagina aangemaakt

--- a/html/Info.html
+++ b/html/Info.html
@@ -71,7 +71,9 @@
       </div>
     </div>
 
-    <div class="info-chevron-left"><a href="#"> <img src="/images/svg/chevron-left-solid.svg" alt="chevron left"></a><p><b>Info</b></p></div>
+    <div class="info-chevron-left"><a href="#"> <img src="/images/svg/chevron-left-solid.svg" alt="chevron left"></a>
+    <h1>Info</h1>
+    </div>
       <!-- Hoe leen je iets uit? -->
       <div class="info_uitleen_uitleg">
         <h2>Hoe leen je iets uit?</h2>
