defect melden pagina af

--- a/html/DefectMelden.html
+++ b/html/DefectMelden.html
@@ -49,30 +49,23 @@
     <p class="bevestig">1. Bekijk de ID-sticker op jouw apparaat. <br>
         2. Duid het apparaat (max. 1) aan waarvan je een defect wilt melden. </p>
 
-    <div class="defecte_apparaten_container">
-        <div class="defect_apparaat">
-            <img src="/images/svg/circle-regular.svg" alt="">
-            <div class="defecte_apparaten">
-                <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">  
-                <h2>Canon-M50</h2>
-                <div class="apparaat_id">
-                    <h2>Apparaat-ID:</h2>
-                    <p>123456789</p>
-                </div>         
+    <div class="item_info_en_selectiebol">
+      <div id="selectie_bol">
+          <img src="/images/svg/circle-regular.svg" alt="check">
+        </div>
+        <div class="item_info_container">
+            <div class="item_info">
+                <img  src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">
+            <h2>Canon-M50</h2>
+            <div class="apparaat_id">
+                <h3>Apparaat ID:</h3>
+                <p>123456</p>
+            </div>
+            <img class="verwijder" src="/images/svg/xmark-solid.svg" alt="klik weg">
             </div>
         </div>
-        <div class="defect_apparaat">
-            <img src="/images/svg/circle-regular.svg" alt="">
-            <div class="defecte_apparaten">
-                <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto apparaat">  
-                <h2>Canon-M50</h2>
-                <div class="apparaat_id">
-                    <h2>Apparaat-ID:</h2>
-                    <p>123456789</p>
-                </div>         
-            </div>
+      </div>
         </div>
-    </div>
     <div class="bevestig_btn">
         <a href="/html/FinalDefectMelden.html"><button>Bevestig</button></a>
     </div>
@@ -80,7 +73,7 @@
         <div class="footer_container">
             <div class="ehb-info">
                 <ul>
-                  <!-- emial linken met echte mail -->
+                  <!-- email linken met echte mail -->
                   <li>
                     <a href="#"><img src="../images/svg/envelope-solid.svg" alt="envelope"> medialab.ehb@ehb.be</a>
                   </li>
