--- a/html/Kalender.html
+++ b/html/Kalender.html
@@ -75,9 +75,9 @@
             <td>01/04/2025 (maandag)</td>
             <td class="uitleg">Paasmaandag</td>
         </tr>
-        <tr>
-          <td> </td>
-          <td></td>
+        <tr class="empty">
+          <td  class="empty"> </td>
+          <td  class="empty"></td>
         </tr>
     </table>
 
