Defect meld pagina's volledig klaar + verleningsAanvragen gestart html

--- a/html/DefectBeschrijven.html
+++ b/html/DefectBeschrijven.html
@@ -61,8 +61,8 @@
           </div>
         </div>
 
-    <p>Beschrijf het defect zo precies mogelijk</p>
-    <input class="beschrijving_defect" type="text" placeholder="Voorbeeld: Mijn camera heeft een rare zwarte vlek in de rechterbovenhoek van elke foto, zelfs na het schoonmaken van de lens. Het begon nadat ik het apparaat per ongeluk liet vallen tijdens een wandeling in het park gisteren">
+    <p class="beschrijf">Beschrijf het defect zo precies mogelijk</p>
+    <input class="beschrijving_defect" type="text" size="50" maxlength="5000" placeholder="Voorbeeld: Mijn camera heeft een rare zwarte vlek in de rechterbovenhoek van elke foto, zelfs na het schoonmaken van de lens. Het begon nadat ik het apparaat per ongeluk liet vallen tijdens een wandeling in het park gisteren">
     
 <div class="bevestig_btn">
     <a href="/html/FinalDefectMelden.html"><button>Bevestig</button></a>
