--- a/html/Home.html
+++ b/html/Home.html
@@ -63,19 +63,11 @@
       <div class="recent_lijst_container">
           <img src="/images/svg/chevron-left-solid.svg" alt="">
           <ul class="recent_lijst">
-              <li><a href="#">
+              <li><a href="/html/ApparaatPagina.html">
                   <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
                   <h3>Canon-M50</h3>
               </a></li>
-              <li><a href="#">
-                  <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                  <h3>Canon-M50</h3>
-              </a></li>
-              <li><a href="#">
-                  <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
-                  <h3>Canon-M50</h3>
-              </a></li>
-              <li><a href="#">
+              <li><a href="/html/ApparaatPagina.html">
                   <img src="/images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="">
                   <h3>Canon-M50</h3>
               </a></li>
