--- a/html/Info.html
+++ b/html/Info.html
@@ -181,10 +181,10 @@
 </div>
 </div>
 <!-- form  -->
-<h1 class="info-form">Geen antwoord gevonden op je vraag? Vul dit formulier dan in. </h1>
+<h1 class="info-form-h1">Geen antwoord gevonden op je vraag? Vul dit formulier dan in. </h1>
 <form class="info-form">
-  <input type="text">
-  <input type="submit" value="Submit">
+  <div class="info-text"><input type="text"></div>
+  <div class="info-submit"><input type="submit" value="Submit"></div>
 </form>
 
 
