info pagina css klaar

--- a/html/Info.html
+++ b/html/Info.html
@@ -131,11 +131,6 @@
           <td>/</td>
           <td>/</td>
         </tr>
-        <tr>
-          <th></th>
-          <td></td>
-          <td></td>
-        </tr>
       </table>
     </div>
   </body>
@@ -191,7 +186,7 @@
 <h1 class="info-form-h1">Geen antwoord gevonden op je vraag? Vul dit formulier dan in. </h1>
 <form class="info-form">
   <div class="info-text"><input type="text"></div>
-  <div class="info-submit"><input type="submit" value="Submit"></div>
+  <div class="info-submit"><input type="submit" value="Verstuur"></div>
 </form>
 
 
