--- a/html/Info.html
+++ b/html/Info.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="info-chevron-left"><a href="#"> <img src="/images/svg/chevron-left-solid.svg" alt="chevron left"></a>
-    <h1>Info</h1>
+    <h1 class="info_titel">Info</h1>
     </div>
       <!-- Hoe leen je iets uit? -->
       <div class="info_uitleen_uitleg">
