--- a/html/Reservaties.html
+++ b/html/Reservaties.html
@@ -81,42 +81,46 @@
           </div>
         </div>
 
-        <div class="info-chevron-left">
+        <div class="reservatie-chevron-left">
           <a href="#">
             <img src="/images/svg/chevron-left-solid.svg" alt="chevron left"
           /></a>
-          <p><b>Mijn Reservaties</b></p>
+          <h1><b>Mijn Reservaties</b></h1>
         </div>
         <div class="reservatie-top">
-          <h1>Nog op te halen</h1>
-          <button>
+          <h2>Nog op te halen</h2>
+          <a href="">
             alles annuleren
             <img src="../images/svg/circle-xmark-solid.svg" alt="xmark" />
-          </button>
+        </a>
         </div>
         <div class="reservatie-box1">
-            <button class="reservatie-button"></button>
+            <label class="reservatie-checkbox-container">
+                <input type="checkbox">
+                <span class="reservatie-checkmark"></span>
+              </label>
+              <div class="reservatie-box-full">
             <div class="reservatie-box-info">
                 <img src="../images/webp/eos-m50-bk-ef-m15-45-stm-frt-2_b6ff8463fb194bfd9631178f76e73f9a.webp" alt="foto">
-                <div class="reservatie-artikel-info"><h2>Canon-M50</h2>
+            </div>
+                <div class="reservatie-artikel-info"><h3>Canon-M50</h3>
                 <p>van 22/04/2024</p>
                 <p>tot 27/04/2024</p>
-                <h2>aantal:</h2>
+                <h3>aantal:</h3>
                 <p>1</p>
             </div>
-            <div class="status">
-                <h2>Status:</h2>
+            <div class="reservatie-status">
+                <h3>Status:</h3>
                 <p><b>Binnen 3 dagen ophalen</b></p>
                 <h2>Reservatie-ID:</h2>
                 <p>04125</p>
-                <button>
-                    annuleren
-                    <img src="../images/svg/circle-xmark-solid.svg" alt="xmark" />
-                  </button>
             </div>
-
+            <div class="reservatie-annuleren"><a href="">
+                annuleren<img src="../images/svg/circle-xmark-solid.svg" alt="xmark" />
+            </a>
             </div>
-
+            </div>
+        </div>
         </div>
         <!-- footer -->
         <footer>
